# ergonice

./: README.md  layout.jsonl
case/: Binder.Gui.xml  Binder.xml  Binder001.Gui.xml  Binder001.xml  Binder002.Gui.xml  Binder002.xml  Binder003.Gui.xml  Binder003.xml  Binder004.Gui.xml  Binder004.xml  Binder005.Gui.xml  Binder005.xml  Binder006.Gui.xml  Binder006.xml  Binder007.Gui.xml  Binder007.xml  Binder008.Gui.xml  Binder008.xml  Binder009.Gui.xml  Binder009.xml  Binder010.Gui.xml  Binder010.xml  Binder011.Gui.xml  Binder011.xml  Body.Gui.xml  Body.xml  Body001.Gui.xml  Body001.xml  Body002.Gui.xml  Body002.xml  Body003.Gui.xml  Body003.xml  Body004.Gui.xml  Body004.xml  Body005.Gui.xml  Body005.xml  Box001.Gui.xml  Box001.xml  Box002.Gui.xml  Box002.xml  (+1513 more)
fw/: Cargo.toml
fw/.cargo/: config.toml
fw/src/: dma_scan.rs  layout.rs  main.rs
pcb-ergonice/: blocks.json  pcb-ergonice.hprj  top_block.json  top_schematic.json
pcb-ergonice/pool/decals/cache/: 42ca4874-9ebe-4a22-9983-89435693d885.json
pcb-ergonice/pool/entities/cache/: 09952b1f-1221-48ad-896c-4481914e3af2.json  ca422899-391a-465a-9e93-721d545a5381.json
pcb-ergonice/pool/padstacks/cache/: 161e1895-9c7e-445a-b4e6-c6b3741b6212.json
pcb-ergonice/pool/parts/: cherrymx.json  pin-header-254-1x2-angled.json  pin-header-254-1x3-angled.json  pogo4.json  th-resistor.json
pcb-ergonice/pool/parts/cache/: 9f920c96-b831-4eed-a432-fd4295252a05.json  a14c5b80-65a3-4930-af59-62cb6e6c5183.json  b55e77a2-1d7c-4a49-a413-bc973fc20eb5.json  d65dd4ca-4520-429d-9a72-6db1a40ba69a.json  (+1 more)
(+8 files in other folders)
