[package]
name = "ergonice-fw"
version = "0.1.0"
authors = ["Greg V <greg@unrelenting.technology>"]
description = "ErgoNICE mechanical keyboard firmware"
license = "Unlicense"
readme = "../README.md"
homepage = "https://github.com/unrelentingtech/ergonice"
repository = "https://github.com/unrelentingtech/ergonice"
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
opt-level = "s"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.0.0"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = { version = "0.2", features = ["unproven"] }
stm32l1xx-hal = { git = "https://github.com/unrelentingtech/stm32l1xx-hal", branch = "deps-and-usb", features = ["stm32l151", "stm32-usbd"] }
# stm32l1xx-hal = { path = "../../../stm32-rs/stm32l1xx-hal", features = ["stm32l151", "stm32-usbd"] }
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
stm32-usbd = "0.6.0"
usb-device = "0.2.8"
# heapless = { version = "0.7.5", default-features = false }
